Added semantic matching with all-mpnet-base-v2 Transformers

--- a/notebooks/02_skills_extraction_simple.ipynb
+++ b/notebooks/02_skills_extraction_simple.ipynb
@@ -338,6 +338,50 @@
     "\n",
     "print(f\"\\n📊 TOTAL : {len(technical_skills_found) + len(soft_skills_found)} compétences\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "602a1aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "💾 Résultats sauvegardés : c:\\Users\\rober\\OneDrive\\Bureau\\PFE\\outputs\\extracted_skills_simple.json\n",
+      "📊 Taille : 0.7 KB\n",
+      "\n",
+      "✅ Extraction terminée avec succès !\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Créer un dictionnaire de résultats\n",
+    "results = {\n",
+    "    \"cv_file\": \"RESUME ROBERT UNG.pdf\",\n",
+    "    \"extraction_date\": \"2026-01-25\",\n",
+    "    \"method\": \"spaCy + keyword matching\",\n",
+    "    \"technical_skills\": technical_skills_found,\n",
+    "    \"soft_skills\": soft_skills_found,\n",
+    "    \"total_skills\": len(technical_skills_found) + len(soft_skills_found)\n",
+    "}\n",
+    "\n",
+    "# Sauvegarder en JSON\n",
+    "output_dir = project_root / \"outputs\"\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "output_path = output_dir / \"extracted_skills_simple.json\"\n",
+    "\n",
+    "with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(results, f, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "print(f\"\\n💾 Résultats sauvegardés : {output_path}\")\n",
+    "print(f\"📊 Taille : {output_path.stat().st_size / 1024:.1f} KB\")\n",
+    "\n",
+    "print(\"\\n✅ Extraction terminée avec succès !\")"
+   ]
   }
  ],
  "metadata": {
