Remove multi matching score and keep only matching skill

--- a/notebooks/03_semantic_matching.ipynb
+++ b/notebooks/03_semantic_matching.ipynb
@@ -34,21 +34,7 @@
      "output_type": "stream",
      "text": [
       "📁 Projet : c:\\Users\\rober\\OneDrive\\Bureau\\PFE\n",
-      "📂 Notebooks : c:\\Users\\rober\\OneDrive\\Bureau\\PFE\\notebooks\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\rober\\OneDrive\\Bureau\\PFE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "📂 Notebooks : c:\\Users\\rober\\OneDrive\\Bureau\\PFE\\notebooks\n",
       "✅ sentence-transformers importé\n",
       "✅ scikit-learn importé\n"
      ]
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "2cd0a200",
    "metadata": {},
    "outputs": [
@@ -119,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "f5c20aff",
    "metadata": {},
    "outputs": [
@@ -188,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "dde818f7",
    "metadata": {},
    "outputs": [
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c07c349a",
    "metadata": {},
    "outputs": [
@@ -286,7 +272,7 @@
       "============================================================\n",
       "🧪 TEST 3 : Matching CV vs Description de Poste\n",
       "============================================================\n",
-      "✅ CV chargé : 3195 caractères\n",
+      "✅ CV chargé : 3172 caractères\n",
       "✅ Compétences chargées : 24 compétences\n",
       "   Exemples : .net, artificial intelligence, big data, c, c#\n"
      ]
@@ -326,33 +312,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "c5d6f4aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Créer une description de poste fictive\n",
     "job_description = \"\"\"\n",
-    "We are looking for a Senior ML Engineer with strong experience in:\n",
-    "- Deep Learning and Neural Networks\n",
-    "- Python development with PyTorch or TensorFlow\n",
-    "- Containerization (Docker, Kubernetes)\n",
-    "- Cloud platforms (AWS, Azure, or GCP)\n",
-    "- Data pipelines and ETL processes\n",
-    "- RESTful API development\n",
-    "- Version control with Git\n",
-    "- Agile methodologies\n",
-    "\n",
-    "Nice to have:\n",
-    "- Computer Vision or NLP experience\n",
-    "- FastAPI or Flask\n",
-    "- CI/CD pipelines\n",
+    "\"job_id\": \"job_001\",\n",
+    "      \"category\": \"ml_engineer\",\n",
+    "      \"title\": \"Junior ML Engineer\",\n",
+    "      \"company\": \"AI Startup Paris\",\n",
+    "      \"location\": \"Toulouse, France\",\n",
+    "      \"type\": \"CDI\",\n",
+    "      \"experience\": \"0-2 ans\",\n",
+    "      \"salary\": \"35-45K€\",\n",
+    "      \"description\": \"Nous recherchons un Junior ML Engineer passionné pour rejoindre notre équipe R&D.\\n\\nResponsabilités :\\n- Développer des modèles de Machine Learning (classification, régression)\\n- Entraîner et optimiser des réseaux de neurones avec PyTorch\\n- Déployer des modèles en production avec Docker\\n- Participer aux revues de code et à l'amélioration continue\\n\\nStack technique :\\n- Python, PyTorch, scikit-learn\\n- Docker, Git\\n- FastAPI pour les APIs\\n- PostgreSQL\",\n",
+    "      \"requirements\": [\n",
+    "        \"Python (numpy, pandas, scikit-learn)\",\n",
+    "        \"Machine Learning basics (supervised learning)\",\n",
+    "        \"Git et GitHub\",\n",
+    "        \"Docker (notions de base)\",\n",
+    "        \"Anglais technique (lecture documentation)\"\n",
+    "      ],\n",
+    "      \"nice_to_have\": [\n",
+    "        \"PyTorch ou TensorFlow\",\n",
+    "        \"FastAPI ou Flask\",\n",
+    "        \"MLflow\",\n",
+    "        \"AWS ou GCP\"\n",
+    "      ],\n",
+    "      \"posted_date\": \"2026-01-08\",\n",
+    "      \"url\": \"https://example-jobs.com/1\",\n",
+    "      \"remote_ok\": false,\n",
+    "      \"applicants\": 99\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "60d54fac",
    "metadata": {},
    "outputs": [
@@ -362,11 +360,11 @@
      "text": [
       "\n",
       "🔍 Calcul du matching CV ↔ Offre d'emploi (VERSION AMÉLIORÉE)...\n",
-      "   Analyse de 13 phrases dans la description...\n",
+      "   Analyse de 33 phrases dans la description...\n",
       "\n",
       "✅ Analyse terminée\n",
-      "   • Score global : 37.0%\n",
-      "   • Compétences très pertinentes : 7/24\n"
+      "   • Score global : 45.9%\n",
+      "   • Compétences très pertinentes : 15/24\n"
      ]
     }
    ],
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "id": "45faec32",
    "metadata": {},
    "outputs": [
@@ -469,38 +467,38 @@
       "🎯 MATCHING CV ↔ OFFRE D'EMPLOI\n",
       "============================================================\n",
       "\n",
-      "📊 SCORE GLOBAL : 37.0%\n",
-      "🟡 BON MATCH - Candidat qualifié\n",
+      "📊 SCORE GLOBAL : 47.4%\n",
+      "✅ EXCELLENT MATCH - Candidat très qualifié\n",
       "\n",
       "🔧 TOP 10 COMPÉTENCES PERTINENTES :\n",
       "------------------------------------------------------------\n",
-      " 1. 🟢 git                       → 69.9%\n",
-      " 2. 🟢 deep learning             → 66.6%\n",
-      " 3. 🟢 docker                    → 64.4%\n",
-      " 4. 🟢 machine learning          → 51.5%\n",
-      " 5. 🟢 artificial intelligence   → 44.8%\n",
-      " 6. 🟢 data science              → 42.6%\n",
-      " 7. 🟢 jupyter                   → 41.4%\n",
-      " 8. 🟡 scikit-learn              → 38.0%\n",
-      " 9. 🟡 numpy                     → 36.8%\n",
-      "10. 🟡 big data                  → 36.4%\n",
-      "11. 🟡 python                    → 35.0%\n",
-      "12. 🟡 linux                     → 33.5%\n",
-      "13. 🟡 c++                       → 31.1%\n",
-      "14. 🟡 sql                       → 31.0%\n",
-      "15. 🟡 node.js                   → 30.9%\n",
-      "16. 🟡 data analysis             → 30.9%\n",
-      "17. 🔴 java                      → 29.6%\n",
-      "18. 🔴 c#                        → 27.5%\n",
-      "19. 🔴 .net                      → 26.6%\n",
-      "20. 🔴 pandas                    → 26.2%\n",
+      " 1. 🟢 scikit-learn              → 72.3%\n",
+      " 2. 🟢 docker                    → 68.0%\n",
+      " 3. 🟢 machine learning          → 67.2%\n",
+      " 4. 🟢 data science              → 60.7%\n",
+      " 5. 🟢 python                    → 60.2%\n",
+      " 6. 🟢 git                       → 54.9%\n",
+      " 7. 🟢 pandas                    → 54.4%\n",
+      " 8. 🟢 data analysis             → 54.0%\n",
+      " 9. 🟢 sql                       → 53.4%\n",
+      "10. 🟢 artificial intelligence   → 52.4%\n",
+      "11. 🟢 numpy                     → 51.8%\n",
+      "12. 🟢 deep learning             → 50.9%\n",
+      "13. 🟢 jupyter                   → 50.5%\n",
+      "14. 🟢 big data                  → 46.5%\n",
+      "15. 🟢 matplotlib                → 43.4%\n",
+      "16. 🟢 java                      → 40.4%\n",
+      "17. 🟡 excel                     → 39.7%\n",
+      "18. 🟡 c++                       → 37.5%\n",
+      "19. 🟡 linux                     → 37.0%\n",
+      "20. 🟡 c#                        → 34.1%\n",
       "\n",
-      "💡 Compétences très pertinentes (7) :\n",
-      "  • git\n",
-      "  • deep learning\n",
+      "💡 Compétences très pertinentes (16) :\n",
+      "  • scikit-learn\n",
       "  • docker\n",
       "  • machine learning\n",
-      "  • artificial intelligence\n"
+      "  • data science\n",
+      "  • python\n"
      ]
     }
    ],
